fix: content visibility should not automatically apply to all data-card

--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -246,8 +246,6 @@
 
     .data-card {
         @apply bg-surface-2 hover:bg-surface-3 dark:hover:bg-primary-dark-600 dark:bg-surface-2/70;
-        content-visibility: auto;
-        contain-intrinsic-size: auto 76px;
     }
 
     .content-auto {
